@@ -10,6 +10,9 @@ version 2.0.0
 	* Screenname colors in chats now come from GNOME color palette
 	* Yahoo! has the following new "/" commands:  /join, /buzz
 
+	Bug fixes:
+	* People using input methods can now use Enter again.
+
 	Preference changes:
 	* Removed keyboard shortcut preferences for ctrl-b/i/u and made sure they
 	  won't interfere with bindings set by the GTK theme.
@@ -19,6 +22,7 @@ version 2.0.0
 	* Removed "Show multi-colored screennames in chats," defaulted to "Yes."
 	  Made screenname colors automatically adjust themselves to compensate for
 	  background color.
+	* Removed "Raise Buddy List Window on Events" defaulted to "No"
 
 version 1.0.2 (10/19/2004):
 	Bug Fixes:
